[gd_scene load_steps=21 format=2]

[ext_resource path="res://scenes/Main.gd" type="Script" id=1]
[ext_resource path="res://sprites/button.png" type="Texture" id=2]
[ext_resource path="res://sprites/title_screen.png" type="Texture" id=3]
[ext_resource path="res://sprites/title.png" type="Texture" id=4]
[ext_resource path="res://armorgames_splash.webm" type="VideoStream" id=5]
[ext_resource path="res://scenes/LevelSelect.tscn" type="PackedScene" id=6]
[ext_resource path="res://audio/land.wav" type="AudioStream" id=7]
[ext_resource path="res://website_branding/armorgames_logo.png" type="Texture" id=8]
[ext_resource path="res://sprites/wide_button.png" type="Texture" id=9]
[ext_resource path="res://materials/DePixelKlein.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://scenes/ArmorGames.gd" type="Script" id=11]

[sub_resource type="DynamicFontData" id=2]
antialiased = false
hinting = 0
font_path = "res://materials/Pixellari.ttf"

[sub_resource type="DynamicFont" id=3]
outline_color = Color( 0.25098, 0.313726, 0.0627451, 1 )
extra_spacing_bottom = -3
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 9
outline_size = 1
outline_color = Color( 0.439216, 0.501961, 0.156863, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=5]
size = 9
outline_color = Color( 0.25098, 0.313726, 0.0627451, 1 )
extra_spacing_bottom = -3
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -7.0
margin_right = 44.0
margin_bottom = 57.0
__meta__ = {
"_edit_group_": true
}

[node name="StartButton" type="TextureButton" parent="Buttons"]
margin_right = 88.0
margin_bottom = 30.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -6.5
margin_right = 25.0
margin_bottom = 6.5
custom_colors/font_color = Color( 0.439216, 0.501961, 0.156863, 1 )
custom_fonts/font = SubResource( 3 )
text = "START"
valign = 1

[node name="Settings" type="TextureButton" parent="Buttons"]
margin_top = 34.0
margin_right = 88.0
margin_bottom = 64.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Buttons/Settings"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -38.0
margin_top = -6.5
margin_right = 38.0
margin_bottom = 6.5
custom_colors/font_color = Color( 0.439216, 0.501961, 0.156863, 1 )
custom_fonts/font = SubResource( 3 )
text = "SETTINGS"
valign = 1

[node name="LevelSelect" parent="." instance=ExtResource( 6 )]
visible = false
margin_left = -82.0
margin_top = -13.0
margin_right = 82.0
margin_bottom = 67.0

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -116.0
margin_right = 100.0
margin_bottom = -27.0
texture = ExtResource( 4 )

[node name="Credits" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = -11.0
margin_right = 137.0
custom_colors/font_color = Color( 0.815686, 0.815686, 0.345098, 1 )
custom_fonts/font = SubResource( 1 )
text = "Made by: wer8888, Goobeart"
align = 1

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "Sound"

[node name="ArmorGames" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_lock_": true
}
ON = true

[node name="Logo" type="TextureButton" parent="ArmorGames"]
margin_left = 10.0
margin_top = 207.0
margin_right = 126.0
margin_bottom = 242.0
texture_normal = ExtResource( 8 )
expand = true

[node name="PlayMoreGames" type="TextureButton" parent="ArmorGames"]
margin_left = 137.0
margin_top = 206.0
margin_right = 235.0
margin_bottom = 227.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ArmorGames/PlayMoreGames"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.5
margin_top = -7.0
margin_right = 42.5
margin_bottom = 5.0
custom_colors/font_color = Color( 0.439216, 0.501961, 0.156863, 1 )
custom_fonts/font = SubResource( 5 )
text = "Play More Games!"
valign = 1

[node name="LikeUs" type="TextureButton" parent="ArmorGames"]
margin_left = 161.0
margin_top = 230.0
margin_right = 214.0
margin_bottom = 249.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ArmorGames/LikeUs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.5
margin_top = -5.0
margin_right = 18.5
margin_bottom = 3.0
custom_colors/font_color = Color( 0.439216, 0.501961, 0.156863, 1 )
custom_fonts/font = SubResource( 5 )
text = "Like Us!"
valign = 1

[node name="SplashBG" type="ColorRect" parent="ArmorGames"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="ArmorGamesSplash" type="VideoPlayer" parent="ArmorGames"]
visible = false
margin_left = -35.0
margin_top = 8.0
margin_right = 613.0
margin_bottom = 440.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 2
stream = ExtResource( 5 )
expand = false

[node name="SplashButton" type="Button" parent="ArmorGames"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )

[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="exited" from="LevelSelect" to="." method="_on_LevelSelect_exited"]
[connection signal="pressed" from="ArmorGames/Logo" to="ArmorGames" method="_on_Logo_pressed"]
[connection signal="pressed" from="ArmorGames/PlayMoreGames" to="ArmorGames" method="_on_PlayMoreGames_pressed"]
[connection signal="pressed" from="ArmorGames/LikeUs" to="ArmorGames" method="_on_LikeUs_pressed"]
[connection signal="pressed" from="ArmorGames/SplashButton" to="ArmorGames" method="_on_SplashButton_pressed"]
